2004-04-25  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-day-view.c (e_day_view_add_event):
	* gui/e-week-view.c (e_week_view_add_event): set the recurrence ID.

2004-04-23  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-calendar-view.c (e_calendar_view_delete_selected_occurrence):
	use the correct start time to get the recurrence-ID.

2004-04-23  Rodney Dawes  <dobey@ximian.com>

	* gui/alarm-notify/notify-main.c (main): Call e_icon_factory_init ()

	Fixes #57497

2004-04-22  Jeffrey Stedfast  <fejj@ximian.com>

	* conduits/calendar/calendar-conduit.c (start_calendar_server):
	Use e_cal_open_default() instead of e_cal_open().
	(map_name): Changed the path for the pilot map filename.
	(pre_sync): Changed the query to "#t" instead of "(#t)" and
	removed a duplicate block of code (seems to have been a paste-o?).

	* conduits/todo/todo-conduit.c (start_calendar_server): Use
	e_cal_open_default() instead of e_cal_open().
	(map_name): Changed the path for the pilot map filename.
	(pre_sync): Changed the query to "#t" instead of "(#t)" and
	removed a duplicate block of code (seems to have been a paste-o?).

2004-04-22  JP Rosevear  <jpr@ximian.com>

	Fixes #56092
	
	* gui/e-day-view.c (e_day_view_show_popup_menu): weak ref for the
	menu to be destroyed
	(popup_destroyed_cb): reset popup_event_num and popup_event_day

	* gui/e-week-view.c (e_week_view_show_popup_menu): weak ref for
	the menu to be destroyed
	(popup_destroyed_cb): reset the popup_event_num

2004-04-21  JP Rosevear  <jpr@ximian.com>

	* gui/calendar-component.c (create_new_event): make sure we don't
	deref a NULL pointer

2004-04-21  JP Rosevear  <jpr@ximian.com>

	Fixes #56504
	
	* gui/gnome-cal.c (gnome_calendar_destroy): no need to destroy the
	creatable item handler
	(gnome_calendar_set_ui_component): don't do the creatable
	item stuff here

	* gui/e-tasks.c (e_tasks_set_ui_component): don't do the creatable
	item stuff here
	(e_tasks_destroy): no need to destroy creatable item handler
